added a few tests and small refactoring
